--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -7,8 +7,75 @@ author_profile: true
 
 <div class="content">
 
+ 
   <section>
-    <h2>Research</h2>
+    <h2>Working Projects</h2>
+
+    <p>
+<strong>
+  When the Government Fires the State: How Bureaucratic Purges Weaken Public Service Capacity
+  <span class="status-badge">Under Review</span>
+</strong>
+      <br>
+  <span style="margin-left: 1em; font-size: 0.9em; display: inline-block;">
+    • <em>UW Philo S. Bennett Prize for Best Graduate Paper in Democratic Politics (2025)</em>
+  </span>
+</p>
+
+<details>
+  <summary><strong>View Abstract</strong></summary>
+  <p>
+    <small>
+      Political elites in authoritarian regimes often resort to dramatic bureaucratic purges
+      as a strategy to tighten their grip on power. Yet, despite their growing global
+      frequency, the far-reaching social consequences of such sweeping dismissals remain
+      poorly understood. This study examines the impact of bureaucratic purges on service
+      delivery by analyzing mass public employee dismissals in Turkey following the 2016
+      coup attempt. Leveraging variation in teachers’ dismissals across administrative
+      units as an exogenous shock, it aims to estimate the effect of the purge on student
+      performance in high school entrance exams. The results show a significant decline
+      in exam scores following teacher dismissals. By bridging research on bureaucratic
+      turnover, state capacity, and education outcomes, this study offers insight into how
+      politically motivated interventions can undermine public service provision.
+    </small>
+  </p>
+</details>
+
+ <p>
+      <strong>Behind the Desk: What Becomes of Bureaucrats Who Plan Mass Violence? [Data Collection in Progress] </strong><br>
+    </p>
+
+    <details>
+      <summary><strong>View Abstract</strong></summary>
+      <p>
+        <small>
+          While the role of bureaucrats in planning and orchestrating state-sanctioned violence is well-studied, less 
+          attention has been paid to their fates after a regime change. What becomes of “desk murderers,” the bureaucrats 
+          who orchestrated mass violence but were not its public face, once the regime that enabled their actions collapses? 
+          This study argues that their expertise in organizing mass violence can render them valuable to successor regimes 
+          engaged in violent nation-building projects. Drawing on archival sources, I trace the careers of Ottoman bureaucrats 
+          involved in the 1915 Armenian Genocide under the Committee of Union and Progress (CUP), examining their trajectories 
+          within the Turkish Republic established in 1923, which had officially repudiated the CUP. I argue that they had a 
+          higher propensity to be recruited into the new regime to support the nation-building process targeting “remaining” 
+          minorities. These findings can shed light on the continuity of state violence and the afterlives of perpetrators.
+        </small>
+      </p>
+    </details>
+    
+    <p>
+      <strong>What’s in a Name? Naming Practices as Acts of Political Resistance (Analysis in Progress)</strong><br>
+      (with Asli Cansunar, Nela Mrchkovska, and Ramses Llobet)
+    </p>
+
+    <p>
+      <strong>Under the Iron Gavel: Probing the Quieting Effect of Authoritarian University Takeovers on Political Science Research [Data Collection Completed] </strong><br>
+      (with Asli Cansunar)
+    </p>
+ 
+  </section>
+
+   <section>
+    <h2>Master's Thesis</h2>
     <p>
       In 2024, I completed my M.A. thesis titled "<em>The Role of Bureaucratic Purges in Shaping Public Service Provision</em>" 
       in the Political Science department at Sabanci University, advised by Assist. Prof. Fatih Serkant Adiguzel. 
@@ -43,67 +110,6 @@ author_profile: true
 </p>
   </section>
 
-  <section>
-    <h2>Working Projects</h2>
-
-    <p>
-  <strong>When the Government Fires the State: How Bureaucratic Purges Weaken Public Service Capacity (Under Review) </strong><br>
-  <span style="margin-left: 1em; font-size: 0.9em; display: inline-block;">
-    • <em>UW Philo S. Bennett Prize for Best Graduate Paper in Democratic Politics (2025)</em>
-  </span>
-</p>
-
-<details>
-  <summary><strong>View Abstract</strong></summary>
-  <p>
-    <small>
-      Political elites in authoritarian regimes often resort to dramatic bureaucratic purges
-      as a strategy to tighten their grip on power. Yet, despite their growing global
-      frequency, the far-reaching social consequences of such sweeping dismissals remain
-      poorly understood. This study examines the impact of bureaucratic purges on service
-      delivery by analyzing mass public employee dismissals in Turkey following the 2016
-      coup attempt. Leveraging variation in teachers’ dismissals across administrative
-      units as an exogenous shock, it aims to estimate the effect of the purge on student
-      performance in high school entrance exams. The results show a significant decline
-      in exam scores following teacher dismissals. By bridging research on bureaucratic
-      turnover, state capacity, and education outcomes, this study offers insight into how
-      politically motivated interventions can undermine public service provision.
-    </small>
-  </p>
-</details>
-
- <p>
-      <strong>Behind the Desk: What Becomes of Bureaucrats Who Plan Mass Violence?</strong><br>
-    </p>
-
-    <details>
-      <summary><strong>View Abstract</strong></summary>
-      <p>
-        <small>
-          While the role of bureaucrats in planning and orchestrating state-sanctioned violence is well-studied, less 
-          attention has been paid to their fates after a regime change. What becomes of “desk murderers,” the bureaucrats 
-          who orchestrated mass violence but were not its public face, once the regime that enabled their actions collapses? 
-          This study argues that their expertise in organizing mass violence can render them valuable to successor regimes 
-          engaged in violent nation-building projects. Drawing on archival sources, I trace the careers of Ottoman bureaucrats 
-          involved in the 1915 Armenian Genocide under the Committee of Union and Progress (CUP), examining their trajectories 
-          within the Turkish Republic established in 1923, which had officially repudiated the CUP. I argue that they had a 
-          higher propensity to be recruited into the new regime to support the nation-building process targeting “remaining” 
-          minorities. These findings can shed light on the continuity of state violence and the afterlives of perpetrators.
-        </small>
-      </p>
-    </details>
-    
-    <p>
-      <strong>What’s in a Name? Naming Practices as Acts of Political Resistance</strong><br>
-      (with Asli Cansunar, Nela Mrchkovska, and Ramses Llobet)
-    </p>
-
-    <p>
-      <strong>Under the Iron Gavel: Probing the Quieting Effect of Authoritarian University Takeovers on Political Science Research</strong><br>
-      (with Asli Cansunar)
-    </p>
- 
-  </section>
 
 <section>
   <h2>Teaching</h2>
@@ -233,4 +239,17 @@ author_profile: true
   p[style*="text-align: center"] {
     margin-bottom: 0;
   }
+
+.status-badge {
+  display: inline-block;
+  margin-left: 0.5em;
+  padding: 0.15em 0.5em;
+  font-size: 0.8em;
+  border-radius: 0.4em;
+  background-color: #f5f5fa
+  color: #361F5E
+  font-weight: 500;
+  letter-spacing: 0.3px;
+}
 </style>
+
