Update academic page with project status badges

--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -42,7 +42,11 @@ author_profile: true
 </details>
 
  <p>
-      <strong>Behind the Desk: What Becomes of Bureaucrats Who Plan Mass Violence? [Data Collection in Progress] </strong><br>
+<strong>
+  Behind the Desk: What Becomes of Bureaucrats Who Plan Mass Violence?
+  <span class="status-badge">Data Collection in Progress</span>
+</strong>  
+  <br>
     </p>
 
     <details>
@@ -63,12 +67,20 @@ author_profile: true
     </details>
     
     <p>
-      <strong>What’s in a Name? Naming Practices as Acts of Political Resistance (Analysis in Progress)</strong><br>
+<strong>
+  What’s in a Name? Naming Practices as Acts of Political Resistance
+  <span class="status-badge">Analysis in Progress</span>
+</strong>     
+     <br>
       (with Asli Cansunar, Nela Mrchkovska, and Ramses Llobet)
     </p>
 
     <p>
-      <strong>Under the Iron Gavel: Probing the Quieting Effect of Authoritarian University Takeovers on Political Science Research [Data Collection Completed] </strong><br>
+<strong>
+  Under the Iron Gavel: Probing the Quieting Effect of Authoritarian University Takeovers on Political Science Research
+  <span class="status-badge">Data Collection Completed</span>
+</strong>     
+     <br>
       (with Asli Cansunar)
     </p>
  
@@ -242,14 +254,17 @@ author_profile: true
 
 .status-badge {
   display: inline-block;
-  margin-left: 0.5em;
+  margin-left: 0.4em;
   padding: 0.15em 0.5em;
   font-size: 0.8em;
   border-radius: 0.4em;
-  background-color: #f5f5fa
-  color: #361F5E
+  background-color: #f5f5fa; 
+  color: #4B2E83;            
   font-weight: 500;
-  letter-spacing: 0.3px;
+  border: 1px solid #e0e0e0; 
+  vertical-align: middle;
 }
+
+ 
 </style>
 
