--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -254,15 +254,15 @@ author_profile: true
 
 .status-badge {
   display: inline-block;
-  margin-left: 0.4em;
-  padding: 0.15em 0.5em;
-  font-size: 0.8em;
-  border-radius: 0.4em;
-  background-color: #f5f5fa; 
-  color: #4B2E83;            
+  margin-left: 0.35em;
+  padding: 0.05em 0.4em;
+  font-size: 0.75em;
+  border-radius: 0.3em;
+  background-color: #f5f5fa; /* gentle lavender-grey tone */
+  color: #4B2E83;            /* your main purple */
   font-weight: 500;
-  border: 1px solid #e0e0e0; 
-  vertical-align: middle;
+  border: 1px solid #e0e0e0; /* matches your site's borders */
+  vertical-align: text-top;
 }
 
  
