Update text to reflect involvement in WW1 atrocities

--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -58,7 +58,7 @@ author_profile: true
           who orchestrated mass violence but were not its public face, once the regime that enabled their actions collapses? 
           This study argues that their expertise in organizing mass violence can render them valuable to successor regimes 
           engaged in violent nation-building projects. Drawing on archival sources, I trace the careers of Ottoman bureaucrats 
-          involved in the 1915 Armenian Genocide under the Committee of Union and Progress (CUP), examining their trajectories 
+          involved in the atrocities of WW1 under the Committee of Union and Progress (CUP), examining their trajectories 
           within the Turkish Republic established in 1923, which had officially repudiated the CUP. I argue that they had a 
           higher propensity to be recruited into the new regime to support the nation-building process targeting “remaining” 
           minorities. These findings can shed light on the continuity of state violence and the afterlives of perpetrators.
