Add grant information to academic page

--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -47,7 +47,10 @@ author_profile: true
   <span class="status-badge">Data Collection in Progress</span>
 </strong>  
   <br>
-    </p>
+  <span style="margin-left: 1em; font-size: 0.9em; display: inline-block;">
+    • <em>The Kizhanatham Jagannathan Graduate Research Grant (2026-27), UW</em>
+  </span>
+</p>
 
     <details>
       <summary><strong>View Abstract</strong></summary>
