--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -18,7 +18,7 @@ author_profile: true
 </strong>
       <br>
   <span style="margin-left: 1em; font-size: 0.9em; display: inline-block;">
-    • <em>UW Philo S. Bennett Prize for Best Graduate Paper in Democratic Politics (2025)</em>
+    • <em>Philo S. Bennett Prize for Best Graduate Paper in Democratic Politics (2025), UW</em>
   </span>
 </p>
 
